# api

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
app/: buffer.py  config.py  db.py  dependencies.py  main.py  models.py  permissions.py
app/repositories/: accounts.py  api_keys.py  artifacts.py  avatars.py  collaborators.py  media.py  organizations.py  projects.py  runs.py  sessions.py  user_auth.py  users.py
app/routes/: accounts.py  api_keys.py  artifacts.py  auth.py  avatars.py  collaborators.py  files.py  logs.py  media.py  organizations.py  projects.py  resolvers.py  runs.py  scalars.py  users.py
app/storage/: __init__.py  backfill.py  file.py  s3.py
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: build-frontend.sh
tests/: conftest.py  test_buffers.py  test_db.py  test_main.py  test_permissions.py
tests/routes/: test_accounts.py  test_api_keys.py  test_artifacts.py  test_auth.py  test_avatars.py  test_collaborators.py  test_files.py  test_logs.py  test_media.py  test_organizations.py  test_password_reset.py  test_project_transfers.py  test_projects.py  test_runs.py  test_scalars.py  test_users.py  test_workers.py
tests/storage/: test_backfill.py  test_file_storage.py  test_s3_storage.py
underfit_api/: auth.py  buffer.py  config.py  db.py  dependencies.py  email.py  helpers.py  main.py  models.py  permissions.py  schema.py
underfit_api/backfill/: __init__.py  assets.py  runs.py  segments.py  service.py  sidecars.py  ui_state.py
underfit_api/buffers/: __init__.py  logs.py  scalars.py
underfit_api/repositories/: account_aliases.py  account_avatars.py  accounts.py  api_keys.py  artifacts.py  avatars.py  collaborators.py  log_segments.py  media.py  organization_members.py  organizations.py  password_resets.py  project_aliases.py  project_collaborators.py  projects.py  run_workers.py  runs.py  scalar_segments.py  sessions.py  user_auth.py  users.py
underfit_api/routes/: account_avatars.py  accounts.py  api_keys.py  artifacts.py  auth.py  avatars.py  collaborators.py  files.py  logs.py  media.py  organization_members.py  organizations.py  project_collaborators.py  projects.py  resolvers.py  run_workers.py  runs.py  scalars.py  users.py
underfit_api/storage/: __init__.py  backfill.py  file.py  s3.py  types.py
