[project]
name = "underfit-api"
version = "0.1.0"
description = "Python API for the Underfit model reporter"
authors = [{ name = "Mitchell Goff" }]
requires-python = ">=3.9"

readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/underfit-ai/api"
Issues = "https://github.com/underfit-ai/api/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "python-multipart",
    "pillow",
    "tomli",
    "watchdog",
    "boto3",
]

[project.optional-dependencies]
testing = [
    "ruff",
    "ty",
    "pytest",
    "httpx",
]

[tool.setuptools.package-data]
"underfit_api" = ["py.typed", "static/**/*"]

[tool.ruff]
line-length = 120
target-version = "py39"

lint.select = ["ALL"]
lint.ignore = [
    "ARG", "ASYNC", "BLE", "C", "D", "EM", "ERA", "FBT", "PERF", "PLR", "Q", "RET", "RUF", "TC", "TD", "TRY",
    "E701", "FIX002", "N802", "PT018", "S101",
]
