[project]
name = "underfit-api"
version = "0.1.0"
description = "Python API for the Underfit model reporter"
authors = [{ name = "Mitchell Goff" }]
requires-python = ">=3.9"

readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "fastapi>=0.128",
    "uvicorn>=0.39",
    "pydantic>=2.11",
    "sqlalchemy>=2,<3",
    "python-multipart>=0.0.20",
    "pillow>=11",
    'tomli>=2; python_version<"3.11"',
    "watchdog>=6",
]

[project.optional-dependencies]
s3 = ["boto3>=1.42"]
mysql = ["pymysql>=1.1"]
postgresql = ["psycopg[binary]>=3"]
testing = [
    "ruff",
    "ty",
    "pytest",
    "pytest-postgresql",
    "pytest-mysql",
    "httpx",
    "moto[s3]",
]

[project.urls]
Homepage = "https://github.com/underfit-ai/api"
Issues = "https://github.com/underfit-ai/api/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"underfit_api" = ["py.typed", "static/**/*"]

[tool.ruff]
line-length = 120
target-version = "py39"

lint.select = ["ALL"]
lint.ignore = [
    "ARG", "ASYNC", "BLE", "C", "D", "EM", "ERA", "FBT", "PERF", "PLR", "Q", "RET", "RUF", "TC", "TD", "TRY",
    "E701", "FIX002", "N802", "PT018", "S101",
]

[tool.pytest.ini_options]
addopts = "--basetemp=/tmp/underfit-pytest"
